#23: fix misaligned content in info modal

--- a/src/components/modals/Modals.scss
+++ b/src/components/modals/Modals.scss
@@ -39,6 +39,7 @@
     &__FlexWrapper {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         gap: 2rem;
         padding: 1rem;
 
